--- a/templates/footer.html
+++ b/templates/footer.html
@@ -11,7 +11,7 @@
 				    <!-- <span class="justify-content-center">powered by <img src="{# static 'img/logo/logo4.png' #}" alt="" width="120" height="40"></span> -->
 				</div>
 				<div class="col-sm-4">
-				    <span class="justify-content-end"><a href="">Privacy policy</a> | <a href="">Terms</a></span>
+				    <span class="justify-content-end"><a href="/privacy/">Privacy policy</a> | <a href="/terms/">Terms</a></span>
 				</div>
 			</div>
 		</div>
