--- a/templates/footer.html
+++ b/templates/footer.html
@@ -5,7 +5,7 @@
 	    <div class="container text-center">
 			<div class="row">
 				<div class="col-sm-4">
-	    		    <span class="justity-content-start">© 2017 Copyright: <a href=""> Sustainable Energy for All</a> . Created by: <b>ibrokola</b></span>  
+	    		    <span class="justity-content-start">© 2017 Copyright: <a href=""> Sustainable Energy for All</a> . Created by: <a href="https://www.linkedin.com/in/ibraheemkolawole/" style="text-decoration:none; color: black;"><b>ibrokola</b></a></span>  
 				</div>
 				<div class="col-sm-4">
 				    <!-- <span class="justify-content-center">powered by <img src="{# static 'img/logo/logo4.png' #}" alt="" width="120" height="40"></span> -->
