--- a/static/css/main.css
+++ b/static/css/main.css
@@ -152,11 +152,18 @@ h1 {
     color: gray;
 }
 
-.post-text,
+.post-text{
+    background-color: #e6f1f4;
+    border: 2px solid #87CEEB;
+    border-radius: 5px 15px 20px 9px;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+    padding-left: 8px;
+    padding-right: 8px;
+}
 .comment-text {
     background-color: #afeeee;
     border: 1px solid #87CEEB;
-    border-radius: 4px;
+    border-radius: 4px 15px 10pxx;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
     padding-left: 8px;
     padding-right: 8px;
