--- a/static/css/main.css
+++ b/static/css/main.css
@@ -163,7 +163,7 @@ h1 {
 .comment-text {
     background-color: #afeeee;
     border: 1px solid #87CEEB;
-    border-radius: 4px 15px 10pxx;
+    border-radius: 4px 15px 10px;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .08);
     padding-left: 8px;
     padding-right: 8px;
