--- a/templates/base.html
+++ b/templates/base.html
@@ -83,6 +83,10 @@
         {% include_notify_js_variables %}
     {% endblock %}
 
+<script type="text/javascript">
+    function createKeenWebAutoCollector(){window.keenWebAutoCollector=window.KeenWebAutoCollector.create({projectId:'598bd175c9e77c00011ac52a',writeKey:'610FF95108D9B1CF2D6115503DCFDE7C6BCA0ED99C9634CF3DDDCB5BBE3B09B3C00255D28C578D99C0049BB844EDB4F73306DED93C725CF2B546FFCDA968A7C54862813D8C413FE2753D7730EC314CB8FBACB65DD020F0BCB20AA46A5DB4C0E4',onloadCallbacks:window.keenWebAutoCollector.onloadCallbacks}),window.keenWebAutoCollector.loaded()}function initKeenWebAutoCollector(){window.keenWebAutoCollector.domReady()?window.createKeenWebAutoCollector():document.addEventListener("readystatechange",function(){window.keenWebAutoCollector.domReady()&&window.createKeenWebAutoCollector()})}window.keenWebAutoCollector={onloadCallbacks:[],onload:function(a){this.onloadCallbacks.push(a)},domReady:function(){return["ready","complete"].indexOf(document.readyState)>-1}};
+  </script>
+<script async type="text/javascript" src="https://d26b395fwzu5fz.cloudfront.net/keen-web-autocollector-1.0.8.min.js" onload="initKeenWebAutoCollector()"></script>    
 </head>
 
 <body class="mdb-skin">
