--- a/templates/home/carousel.html
+++ b/templates/home/carousel.html
@@ -29,7 +29,7 @@
                             </div>
                             <!--Caption-->
                             <div class="carousel-caption">
-                                <div class="animated fadeInDown">
+                                <div class="animated wow fadeInDown">
                                     <h4 class="h4-responsive">{{ item.title }}</h4>
                                     <p>{{ item.description }}</p>
                                 </div>
