--- a/templates/home/carousel.html
+++ b/templates/home/carousel.html
@@ -29,9 +29,9 @@
                             </div>
                             <!--Caption-->
                             <div class="carousel-caption">
-                                <div class="animated wow fadeInDown">
-                                    <h4 class="h4-responsive">{{ item.title }}</h4>
-                                    <p>{{ item.description }}</p>
+                                <div class="animated wow fadeInDown" >
+                                    <h4 class="h4-responsive wow">{{ item.title }}</h4>
+                                    <p class="wow fadeInUp" data-wow-delay="0.5s">{{ item.description }}</p>
                                 </div>
                             </div>
                             <!--Caption-->
