--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     <meta property="og:title" content="Sustainable Energy Forum">
     <meta property="og:description" content="Share, debate and interact with like minded clean energy enthusiast and professionals">
     <meta property="og:image" content="{% static 'img/logo/logo2.png' %}">
-    <meta property="og:url" content="http://www.sustenergy.ca/">
+    <meta property="og:url" content="https://www.sustenergy.ca/">
     <meta property="og:site_name" content="Sustainable Energy Forum">
     <!-- /Meta OG -->
 
@@ -25,7 +25,7 @@
     <meta name="twitter:card" content="Sustainable Energy Forum">
     <meta name="twitter:description" content="Share, debate and interact with like minded clean energy enthusiast and professionals">
     <meta name="twitter:title" content="Sustainable Energy Forum">
-    <meta name="twitter:site" content="http://www.sustenergy.ca/">
+    <meta name="twitter:site" content="https://www.sustenergy.ca/">
     <meta name="twitter:image" content="{% static 'img/logo/logo2.png' %}">
     <meta name="twitter:creator" content="@ibroCEO">    
 
