--- a/templates/email/welcome.html
+++ b/templates/email/welcome.html
@@ -1,5 +1,6 @@
-<div class="container" style="padding-top: 80px;">
-    <p><small>no-reply@sustenergy.ca</small></p>
+<div class="container">
     <p>Dear <strong>{{ username }}</strong> thanks for joining Sustainable Energy Forum</p>
-    <p>Feel free to share your views for and against the development of clean and sustainable energy in Canada.</p>
+    <p>Feel free to share your views for and against the development of clean and sustainable energy.</p>
+    <br>
+    <p>click <a href="https://www.sustenergy.ca/">here</a> to get back to your dashboard</p>
 </div>
