--- a/templates/forum/discussion.html
+++ b/templates/forum/discussion.html
@@ -32,7 +32,7 @@
                         <div class="col-sm-12">
                             <form method="post" action="">
                                 {% csrf_token %} {{ form|crispy }}
-                                <button type="submit" class="btn btn-default btn-sm"><i class="fa fa-paper-plane"></i> Comment</button>
+                                <button class="post" type="submit" class="btn btn-default btn-sm"><i class="fa fa-paper-plane"></i> Comment</button>
                             </form>
                         </div>
                     </div>
