--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,5 +1,5 @@
 {% load static %}
-{% load notification_tags %}
+{# load notifications_tags #}
 <nav class="navbar fixed-top navbar-toggleable-md navbar-dark scrolling-navbar">
     <div class="container">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,27 +24,16 @@
                 {% endif %}
                 {% if request.user.is_authenticated %}
                 <li class="nav-item dropdown" style="padding-top: 8px;">
-                <a href="#" class="dropdown-toggle notification-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                      <i class="fa fa-bell" aria-hidden="true"></i><span id="note-count-badge" class="badge red z-depth-1"></span>
-                      <!-- {{ user.notifications.count }} -->
-                      <!-- {{ user.notifications.unread.count }} -->
+                <a href="#" class="notification-toggle" id="noti_button" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                      <i class="fa fa-bell" aria-hidden="true"></i><span id="note-count-badge" class="badge red z-depth-1">{# live_notify_badge #}</span>
                 </a>
                   <!-- <span class="caret"></span> -->
-                  <!-- <div id='notification_dropdown' class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownMenuLink"> -->
-                    <ul class="dropdown-menu notification-box-list notificationPanel" id='notification_dropdown' style="position:relative; width: 100%; overflow: hidden; min-width: 250px;">
-                        {% render_notifications using request.user.notifications.active.prefetch for box %}
-                        {# user_notifications for box #} 
-                        <!-- <li> -->
-                            <!-- <div class="notificationPanel"> -->
-                                <!-- <div class="notificationContent" style="overflow-y: scroll; height: 100%;"> -->
-                                    <!-- <ul class="notification-box-list" style="margin:0; padding:0;list-style-type: none;"> -->
-                                        
-                                     <!-- </ul>  <-->
-                                <!-- </div> -->
-                            <!-- </div> -->
-                        <!-- </li> -->
+                  <!-- <ul id='notification_dropdown' class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownMenuLink"> -->
+                    <ul class="dropdown-menu notification-box-list notificationPanel dropdown-menu-left" id='notification_dropdown' style="position:relative; width: 100%; overflow: hidden; min-width: 250px;">
+                        <h3 style="display:block; color:#333; font-weight:bold; font-size:13px; padding:8px; margin:0; border-bottom:solid 1px rgba(100, 100, 100, .30);">Notifications</h3>
+                        <div class="seeAll"><a href="#">All notificatons</a></div>
                     </ul> 
-                  <!-- </div> -->
+                  <!-- </ul> -->
                 </li>
                 {% endif %}
                 <li class="nav-item dropdown">
