--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -1,30 +1,32 @@
-{% extends 'base.html' %} {% load static %} {% block content %}
-<div class="container-fluid justify-content-center text-center" style="padding-top: 70px;">
-    {% include 'home/carousel.html' with home1=home1 %}
-</div>
-<div class="container">
-    <div class="divider-new">
-        <h2 class="h2-responsive">Why join S.E.F?</h2>
-    </div>
-
-    <section class="container marketing">
-        {% if home2 %}
-        <div class="row text-center">
-            {% for item in home2 %}
-            <div class="col-lg-4 col-md-4 mb-r wow fadeInLeft" data-wow-delay="0.2s">
-                <div class="avatar">
-                    {% if item.image %}
-                    <img src="{{ item.image.url }}" class="rounded-circle" width="200" height="200"> {% else %}
-                    <img src="https://mdbootstrap.com/images/avatars/img%20(1).jpg" class="rounded-circle" width="140" height="140"> {% endif %}
-                </div>
-                <h4 class="h4-responsive"><b>{{ item.title }}</b></h4>
-
-                <p>{{ item.reason }}</p>
-            </div>
-            {% endfor %}
+{% extends 'base.html' %} 
+    {% load static %} 
+        {% block content %}
+        <div class="container-fluid justify-content-center text-center" style="padding-top: 70px; margin-left:15px; margin-right:10px;">
+            {% include 'home/carousel.html' with home1=home1 %}
         </div>
-        {% endif %}
-    </section>
-</div>
+        <div class="container">
+            <div class="divider-new">
+                <h2 class="h2-responsive">Why join S.E.F?</h2>
+            </div>
+
+            <section class="container marketing">
+                {% if home2 %}
+                <div class="row text-center">
+                    {% for item in home2 %}
+                    <div class="col-lg-4 col-md-4 mb-r wow fadeInLeft" data-wow-delay="0.2s">
+                        <div class="avatar">
+                            {% if item.image %}
+                            <img src="{{ item.image.url }}" class="rounded-circle" width="200" height="200"> {% else %}
+                            <img src="https://mdbootstrap.com/images/avatars/img%20(1).jpg" class="rounded-circle" width="140" height="140"> {% endif %}
+                        </div>
+                        <h4 class="h4-responsive"><b>{{ item.title }}</b></h4>
+
+                        <p>{{ item.reason }}</p>
+                    </div>
+                    {% endfor %}
+                </div>
+                {% endif %}
+            </section>
+        </div>
 
 {% endblock %}
